<resources>
    <string name="app_name">Popcorn Miner</string>
    <string name="botao_saldo">Saldo</string>
    <string name="botao_carteira">Carteira</string>
    <string name="botao_transferencia">Transferência</string>
    <string name="chave_publica">Chave Pública:</string>
    <string name="digite_sua_chave_publica">Digite sua chave pública</string>
    <string name="chave_privada">Chave Privada:</string>
    <string name="digite_sua_chave_privada">Digite sua chave privada</string>
    <string name="descricao">Descrição:</string>
    <string name="digite_a_descricao">Digite a descrição</string>
    <string name="adicionar">Adicionar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Efetuar Login</string>
    <string name="title_activity_cadastrarlogin">Efetuar Cadastro</string>
    <string name="title_activity_menu">Menu Porcorn Miner</string>
    <string name="title_activity_carteira">Carteira</string>
    <string name="title_activity_addcarteira">Adicionar Carteira</string>
    <string name="title_activity_editarcarteiraactivity">Editar Carteira</string>
    <string name="title_activity_transferencia">Transferência</string>
    <string name="title_activity_novatransferencia">Transferir</string>
    <string name="title_activity_resetsenha">Resetar Senha</string>
    <string name="title_activity_geradorqrcoe">Receber</string>
    <string name="logo">logo</string>

    <!-- Strings login -->
    <string name="email">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="insira_seu_email">Insira seu e-mail</string>
    <string name="insira_seu_email_reset">Insira seu e-mail para reset de senha</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="confirmar_senha">Confirmar Senha:</string>
    <string name="repita_sua_senha">Repita sua senha</string>
    <string name="nome">Nome:</string>
    <string name="insira_seu_nome">Insira seu nome</string>

    <!-- Strings menu ActionBar -->
    <string name="menu_home">Home</string>
    <string name="menu_carteira">Carteira</string>
    <string name="menu_transferencia">Transferência</string>
    <string name="menu_sair">Sair</string>

    <!-- Facebook -->
    <string name="facebook_application_id" translatable="false">1801531709890334</string>
    <!-- ID do Aplicativo do Facebook, prefixado por 'fb'. Ativa as guias personalizadas do Chrome. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb1801531709890334</string>
    <string name="nao_tem_conta_cadastre">Não tem conta? Cadastre-se</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="wallet">Wallet</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="descri_o">Descrição</string>
    <string name="saldo">Saldo</string>
    <string name="imagemTransferencia">imagemTransferencia</string>
    <string name="atualizar">atualizar</string>


</resources>
