<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".CadastrarLoginActivity">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/email"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insira_seu_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textViewSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/senha"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/insira_sua_senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btCadastrarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar" />
</LinearLayout>