<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.EditarCarteiraActivity">

    <TextView
        android:id="@+id/textViewEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/descricao"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDescricaoEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="@string/digite_a_descricao"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2Edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/chave_publica"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editChavePublicaEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="@string/digite_sua_chave_publica"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3Edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/chave_privada"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editChavePrivadaEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="@string/digite_sua_chave_privada"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btAtualizarCarteiraEdt"
        android:layout_width="@dimen/form_botao"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|center"
        android:text="@string/atualizar"
        android:textSize="16sp" />
</LinearLayout>