<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.CadastrarCarteiraActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/descricao"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDescricaoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="@string/digite_a_descricao"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/chave_publica"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editChavePublicaId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="@string/digite_sua_chave_publica"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/chave_privada"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editChavePrivadaId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="@string/digite_sua_chave_privada"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/btnScanAddCart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/ic_camera256px" />

    <Button
        android:id="@+id/btSalvarCarteiraId"
        android:layout_width="@dimen/form_botao"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center"
        android:text="@string/adicionar"
        android:textSize="16sp" />

</LinearLayout>